# AgenticWorkflows_LangChain-LangGraph

./: .gitignore  CLAUDE.md  README.md  main.py  open_questions_remodel.md  pyproject.toml  test_cover.txt  test_cv.txt  test_sop.txt
docs/: ats_coverage.md  auto_apply_frontend_integration_plan.md  auto_apply_status.md  autofill_redesign_plan.md  coverage_run_2026_05_03.md
docs/coverage_run_2026_05_03_post_fix/: ashby-filigran.json  ashby-monumental.json  ashby-robinradar.json  coverage_report.md  gh-adyen.json  gh-dept.json  gh-sofico.json  lever-mendix.json  lever-tsmg.json  lever-wypoon.json  masters-boise-pop.json  masters-mba-turan.json  schol-goostree.json  schol-griffithlaw.json  sr-abercrombie.json  sr-dyka.json  sr-wasco.json  wday-prysmian.json  wday-safeguard.json  wkbl-debenhams.json  wkbl-phoenix.json
docs/superpowers/plans/: 2026-04-26-apply-url-discovery.md  2026-04-26-auto-apply-backend-integration.md  2026-04-26-discovery-v2.md
docs/superpowers/specs/: 2026-04-26-auto-apply-backend-integration.md
samples/: sample_cv.txt
scripts/: coverage_harness.py  coverage_run.py  coverage_urls.json  e2e_auto_apply_harness.py  e2e_discovery_test.py  e2e_scrape_test.py  live_verify_form_filler.py  probe_anthropic_combobox.py
src/UppGrad_Agentic/common/: llm.py
src/UppGrad_Agentic/tools/: documents.py
src/uppgrad_agentic.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py
tests/common/: test_prompt_context.py  test_search_provider_factory.py
tests/tools/: test_ats_form_urls.py  test_form_extractor.py  test_playwright_filler.py  test_playwright_filler_verification.py  test_profile_lookup.py  test_search.py  test_url_discovery_orchestration.py  test_url_discovery_verify.py  test_value_llm_filler.py  test_value_planner.py  test_web_fetcher_browser_fallback.py  test_web_fetcher_clickthrough.py  test_web_fetcher_httpx.py
(+109 files in other folders)
