[project]
name = "uppgrad-agentic"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-core>=1.2.4",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "pydantic>=2.12.5",
    "pypdf>=6.4.2",
    "python-docx>=1.2.0",
    "setuptools>=80.9.0",
    "httpx>=0.27.0",
    "rapidfuzz>=3.10.0",
]

[project.optional-dependencies]
# Browser fallback for discover_apply_url. Lazy-imported in tools/web_fetcher.py
# and gated by UPPGRAD_BROWSER_SCRAPE_ENABLED=true. Installs Playwright as a
# transitive dep; after install run `playwright install chromium`. Heavy
# (~1GB with browsers); do not pull in by default.
browser = [
    "crawl4ai>=0.8.6",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "langgraph-checkpoint-sqlite>=3.0.3",
    "psycopg[binary]>=3.3.3",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"uppgrad_agentic" = ["templates/*.tex"]
